--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -26,31 +25,38 @@
             }
         </style>
     </head>
-
     <body>
-
-        <h1>Home 
-        </h1> <p>
-            <a href="luca-bravo-XJXWbfSo2f0-unsplash.jpg">Welcome to Information Technology where there is new technology being discovered daily.</a>
-        </p>
-        
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <a href="blake-verdoorn-cssvEZacHvQ-unsplash.jpg"> <img src="blake-verdoorn-cssvEZacHvQ-unsplash.jpg"> </a>
-            <a href="david-marcu-78A265wPiO4-unsplash.jpg"> <img src="david-marcu-78A265wPiO4-unsplash.jpg"> </a>
-            <a href="lukasz-szmigiel-jFCViYFYcus-unsplash.jpg"> <img src="lukasz-szmigiel-jFCViYFYcus-unsplash.jpg"> </a>
-            <a href="robert-lukeman-_RBcxo9AU-U-unsplash.jpg"> <img src="robert-lukeman-_RBcxo9AU-U-unsplash.jpg"> </a>
-        </div> 
-
-        <h3>Menu
-        </h3>
-        <ul>
-            <li><a href="allen-rad-JBIK4QZOFfc-unsplash.jpg">Dessert</a></li>
-            <li><a href="hillary-ungson-n9xsu46NGaE-unsplash.jpg">Appetizer</a></li>
-            <li><a href="nerfee-mirandilla-UgKVWZuCxCk-unsplash.jpg">Lunch</a></li>
-            <li><a href="emanuel-ekstrom-KJOUnsGXq58-unsplash.jpg">Pasta</a></li>
-            <li><a href="sonny-mauricio-yhc4pSbl01A-unsplash.jpg">Salad</a></li>
-        </ul>
-        
-    </body>
+        <header>
+            <h1>Welcome to Our Website</h1>
+        </header>
+<main>
+    <section class="container">
+        <h2>Home</h2>
+        <p>Welcome to our website! Here, you can find images related to different topics.</p>
+        <a href="luca-bravo-XJXWbfSo2f0-unsplash.jpg"><img src="luca-bravo-XJXWbfSo2f0-unsplash.jpg" alt= Welcome to Information Technology:New technology being discovered daily alt></a>
+    </section>
+    <section class="container">
+    <h2>Gallery</h2>
+    <div class="gallery">
+        <a href="blake-verdoorn-cssvEZacHvQ-unsplash.jpg"> <img src="blake-verdoorn-cssvEZacHvQ-unsplash.jpg" alt="Nature 1"></a>
+        <a href="david-marcu-78A265wPiO4-unsplash.jpg"> <img src="david-marcu-78A265wPiO4-unsplash.jpg" alt="Nature 2"></a>
+        <a href="lukasz-szmigiel-jFCViYFYcus-unsplash.jpg"> <img src="lukasz-szmigiel-jFCViYFYcus-unsplash.jpg" alt="Nature 3"></a>
+        <a href="robert-lukeman-_RBcxo9AU-U-unsplash.jpg"> <img src="robert-lukeman-_RBcxo9AU-U-unsplash.jpg" alt="Nature 4"></a>
+    </div>
+</section>
+<section class="container">
+    <h2>Menu</h2>
+    <ul class="menu">
+        <li><a href="allen-rad-JBIK4QZOFfc-unsplash.jpg">Dessert</a></li>
+        <li><a href="hillary-ungson-n9xsu46NGaE-unsplash.jpg">Appetizer</a></li>
+        <li><a href="nerfee-mirandilla-UgKVWZuCxCk-unsplash.jpg">Lunch</a></li>
+        <li><a href="emanuel-ekstrom-KJOUnsGXq58-unsplash.jpg">Pasta</a></li>
+        <li><a href="sonny-mauricio-yhc4pSbl01A-unsplash.jpg">Salad</a></li>
+    </ul>
+</section>
+</main>
+<footer>
+    <p>&copy; 2024 Our Website. All rights reserved.</p>
+</footer>
+</body>
 </html>
